--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container register">
+    <link href="login.component.css" rel="stylesheet">
     <div class="row">
         <div class="col-md-3 register-left">
         <img src="" alt="INCO logo"/>
@@ -21,7 +22,7 @@
                                     <a href="/resetPass">I forgot my password</a>
                                     <a href="/registro">Create an account</a>
                                 </div>
-                                <input type="submit" class="btnRegister" onclick="validation()" value="Login"/> 
+                                <input type="submit" class="btnRegister" id="demo" onclick="validation()" value="Login"/> 
                                 <p id="demo" class="P-validation"></p>                          
                             </div>
 
@@ -32,3 +33,15 @@
         </div>
     </div>
 </div> 
+<script>
+    function validation() {
+        let conf = false;
+        var txt;
+        if (conf) {
+            txt = "";
+        }  else {
+            txt = "please check your email and try sing in again"
+        }
+        document.getElementById("demo").innerHTML = txt;
+    }
+</script>
