vista resetPass, logo Inco

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <link href="login.component.css" rel="stylesheet">
     <div class="row">
         <div class="col-md-3 register-left">
-        <img src="" alt="INCO logo"/>
+        <img src="/assets/imagenes/Logo_blanco.png" alt="INCO logo"/>
             <h1>INCO</h1>
         </div>
         <div class="col-md-9 register-right">
