--- a/src/app/register-influencer/register-influencer.component.html
+++ b/src/app/register-influencer/register-influencer.component.html
@@ -1,7 +1,7 @@
 <div class="container register">
     <div class="row">
         <div class="col-md-3 register-left">
-            <img src="" alt="INCO logo"/>
+            <img src="/assets/imagenes/Logo_blanco.png" alt="INCO logo"/>
             <h1>INCO</h1>
             <a href="/">
                 <input type="submit" name="" value="Login"/><br/></a>
@@ -29,6 +29,12 @@
                                 <div class="form-group">
                                     <textarea type="text" class="form-control"  placeholder="Description" value=""></textarea>
                                 </div>  
+                                <h5>foto de perfil</h5>
+                                <input type="file">
+                                <h5>foto de producto</h5>
+                                <input type="file">
+                                <h5>foto del influencer</h5>
+                                <input type="file">
                                 <h3 style="margin-bottom: 20px">Social media</h3>                                           
                             </div>              
                             <input type="submit" class="btnRegister"  value="Register"/>
