--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container register">
     <link href="login.component.css" rel="stylesheet">
     <div class="row">
@@ -45,3 +46,4 @@
         document.getElementById("demo").innerHTML = txt;
     }
 </script>
+</body>
