--- a/src/app/reset-pass/reset-pass.component.html
+++ b/src/app/reset-pass/reset-pass.component.html
@@ -1,36 +1,40 @@
-<div class="container register">
-    <div class="row">
-        <div class="col-md-3 register-left">
-        <img src="/assets/img/Logo_blanco.png" alt="INCO logo"/>
-            <h1>INCO</h1>
-            <a href="/">
-            <input type="submit" name="" value="Back"/><br/></a>
-        </div>
-        <div class="col-md-9 register-right">
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active"  role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="register-heading">Reset Password</h3>
-                        <div class="row register-form">
-                            <div class="col-md-3">
-                            </div>
-                            <div class="col-md-6 ">
-                                <!-- <form action="{{route('Email')}}" method="POST"> -->
-                                    <!-- @csrf -->
-                                    <h6>please insert your Email</h6>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Email *" value="" name="email" required/>                                    
-                                        <input type="submit" class="btnRegister" onclick="validation()"value="Login"/>
-                                        <p id="demo" class="P-validation"></p>
-                                        <div class="row register-form">
+<body>
+    <div class="container register">
+        <div class="row">
+            <div class="col-md-3 register-left">
+            <img src="/assets/img/Logo_blanco.png" alt="INCO logo"/>
+                <h1>INCO</h1>
+                <a href="/">
+                <input type="submit" name="" value="Back"/><br/></a>
+            </div>
+            <div class="col-md-9 register-right">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active"  role="tabpanel" aria-labelledby="home-tab">
+                        <h3 class="register-heading">Reset Password</h3>
+                            <div class="row register-form">
+                                <div class="col-md-3">
+                                </div>
+                                <div class="col-md-6 ">
+                                    <!-- <form action="{{route('Email')}}" method="POST"> -->
+                                        <!-- @csrf -->
+                                        <h6>please insert your Email</h6>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Email *" value="" name="email" required/>                                    
+                                            <input type="submit" class="btnRegister" onclick="validation()"value="Login"/>
+                                            <p id="demo" class="P-validation"></p>
+                                            <div class="row register-form">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <p id="demo" class="P-validation"></p>
-                                <!-- </form>   -->  
+                                        <p id="demo" class="P-validation"></p>
+                                    <!-- </form>   -->  
+                                </div>
+                                <div class="col-md-3">
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                            </div>
-                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div> 
+        </div> 
+    </div>
+    
+</body>
