--- a/src/app/components/influencer-conf/influencer-conf.component.html
+++ b/src/app/components/influencer-conf/influencer-conf.component.html
@@ -8,8 +8,8 @@
       <div class="d-flex flex-column">
   
         <div class="profile">
-          <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-          <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+            <img src="../../../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+          <h1 class="text-light"><a href="../../../index.html">Alex Smith</a></h1>
           <div class="social-links mt-3 text-center">
   
             <!--Realizar click y que se vea la info-->
@@ -24,24 +24,14 @@
   
         <nav id="navbar" class="nav-menu navbar">
           <ul>
-            <li><a href="influencerView.html" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Perfil</span></a></li>
+            <li><a href="influencerView.html" class="nav-link scrollto "><i class="bx bx-user"></i> <span>Perfil</span></a></li>
             <li><a href="influencerRepo.html" class="nav-link scrollto"><i class="bx bx-stats"></i> <span>Colaboraciones</span></a></li>
             <li><a href="influencerCal.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Calificaciones</span></a></li>
-            <li><a href="influencerConfig.html" class="nav-link scrollto"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a></li>
+            <li><a href="influencerConfig.html" class="nav-link scrollto active"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a></li>
           </ul>
         </nav><!-- .nav-menu -->
       </div>
     </header><!-- End Header -->
-  
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-      <div class="hero-container" data-aos="fade-in">
-        <h1>Alex Smith</h1>
-  
-        <!--Dejar como red social-->
-        <p>Yo soy <span class="typed" data-typed-items="Influencer, Creador de contenido, Influenciador"></span></p>
-      </div>
-    </section><!-- End Hero -->
   
     <main id="main">
   
@@ -51,7 +41,19 @@
   
           <div class="section-title">
             <h2>Acerca de mí</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"><br>
+            </div><br>
+            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+              <input type="file" class="form-control-file" id="exampleFormControlFile1">
+            </div>
+            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+              <label for="exampleFormControlFile1">Sube tus fotos</label><br>
+            </div>
+            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+              <small id="emailHelp" class="form-text text-muted " >Actualiza acerca de ti constantemente.</small>            
+            </div>
+            <button type="submit" class="btn btn-primary">Actualizar</button>
           </div>
           <div class="justify-content-center">
             <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
@@ -62,46 +64,17 @@
         </div>
       </section><!-- End About Section -->
   
-      <!-- ======= Facts Section ======= -->
-      <section id="facts" class="facts">
+      <!-- ======= My Account ======= -->
+      <section id="about" class="about">
         <div class="container">
   
           <div class="section-title">
-            <!--Aquí puede ser mucho mejor trar los datos generales-->
-            <h2>Datos</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-          </div>
-  
-          <div class="row no-gutters">
-            <!--Podemos guiarnos para las fotos-->
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-              <div class="count-box">
-                <i class="bi bi-emoji-smile"></i>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Contactos realizados </strong>Cuantos emprendimientos se interezaron en Alex</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-              <div class="count-box">
-                <i class="bi bi-journal-richtext"></i>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Calificaciones</strong> Contactos que han dejado su opinión</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-              <div class="count-box">
-                <i class="bi bi-people"></i>
-                <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Total seguidores</strong> rerum asperiores dolor</p>
-              </div>
-            </div>
-          </div>
-  
+            <h2>Mis datos personales</h2>
         </div>
-      </section><!-- End Facts Section -->
+        </div>
+      </section>
 
+  
     </main><!-- End #main -->
   
     <!-- ======= Footer ======= -->
@@ -121,5 +94,5 @@
     </footer><!-- End  Footer -->
   
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-  
+
   </body>
