--- a/src/app/components/reset-pass/reset-pass.component.html
+++ b/src/app/components/reset-pass/reset-pass.component.html
@@ -2,7 +2,7 @@
     <div class="container register">
         <div class="row">
             <div class="col-md-3 register-left">
-            <img src="/assets/img/Logo_blanco.png" alt="INCO logo"/>
+            <img src="/src/assets/img/Logo_blanco.png" alt="INCO logo"/>
                 <h1>INCO</h1>
                 <a href="/">
                 <input type="submit" name="" value="Back"/><br/></a>
