--- a/src/app/components/influencer-conf/influencer-conf.component.html
+++ b/src/app/components/influencer-conf/influencer-conf.component.html
@@ -1,98 +1,104 @@
-<body>
+<!-- ======= Mobile nav toggle button ======= -->
+<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-    <!-- ======= Mobile nav toggle button ======= -->
-    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-  
-    <!-- ======= Header ======= -->
-    <header id="header">
-      <div class="d-flex flex-column">
-  
+<!-- ======= Header ======= -->
+<header id="header">
+    <div class="d-flex flex-column">
+
         <div class="profile">
             <img src="../../../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-          <h1 class="text-light"><a href="../../../index.html">Alex Smith</a></h1>
-          <div class="social-links mt-3 text-center">
-  
-            <!--Realizar click y que se vea la info-->
-  
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          </div>
-        </div>
-  
-        <nav id="navbar" class="nav-menu navbar">
-          <ul>
-            <li><a href="influencerView.html" class="nav-link scrollto "><i class="bx bx-user"></i> <span>Perfil</span></a></li>
-            <li><a href="influencerRepo.html" class="nav-link scrollto"><i class="bx bx-stats"></i> <span>Colaboraciones</span></a></li>
-            <li><a href="influencerCal.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Calificaciones</span></a></li>
-            <li><a href="influencerConfig.html" class="nav-link scrollto active"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a></li>
-          </ul>
-        </nav><!-- .nav-menu -->
-      </div>
-    </header><!-- End Header -->
-  
-    <main id="main">
-  
-      <!-- ======= About Section ======= -->
-      <section id="about" class="about">
-        <div class="container">
-  
-          <div class="section-title">
-            <h2>Acerca de mí</h2>
-            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"><br>
-            </div><br>
-            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-              <input type="file" class="form-control-file" id="exampleFormControlFile1">
-            </div>
-            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-              <label for="exampleFormControlFile1">Sube tus fotos</label><br>
-            </div>
-            <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
-              <small id="emailHelp" class="form-text text-muted " >Actualiza acerca de ti constantemente.</small>            
-            </div>
-            <button type="submit" class="btn btn-primary">Actualizar</button>
-          </div>
-          <div class="justify-content-center">
-            <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
-            <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6" class="col-lg-3 col-sm-12 col-md-8 py-1">
-            <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6" class="col-lg-3 col-sm-12 col-md-8 py-1">
-            <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6" class="col-lg-3 col-sm-12 col-md-8 py-1">
-          </div>
-        </div>
-      </section><!-- End About Section -->
-  
-      <!-- ======= My Account ======= -->
-      <section id="about" class="about">
-        <div class="container">
-  
-          <div class="section-title">
-            <h2>Mis datos personales</h2>
-        </div>
-        </div>
-      </section>
+            <h1 class="text-light"><a href="../../../index.html">Alex Smith</a></h1>
+            <div class="social-links mt-3 text-center">
 
-  
-    </main><!-- End #main -->
-  
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="container">
+                <!--Realizar click y que se vea la info-->
+
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
+        </div>
+
+        <nav id="navbar" class="nav-menu navbar">
+            <ul>
+                <li><a href="influencerView.html" class="nav-link scrollto "><i class="bx bx-user"></i>
+                    <span>Perfil</span></a></li>
+                <li><a href="influencerRepo.html" class="nav-link scrollto"><i class="bx bx-stats"></i> <span>Colaboraciones</span></a>
+                </li>
+                <li><a href="influencerCal.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Calificaciones</span></a>
+                </li>
+                <li><a href="influencerConfig.html" class="nav-link scrollto active"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a>
+                </li>
+            </ul>
+        </nav><!-- .nav-menu -->
+    </div>
+</header><!-- End Header -->
+
+<main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+        <div class="container">
+
+            <div class="section-title">
+                <h2>Acerca de mí</h2>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"><br>
+                </div>
+                <br>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                </div>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+                    <label for="exampleFormControlFile1">Sube tus fotos</label><br>
+                </div>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch" class="form-group">
+                    <small id="emailHelp" class="form-text text-muted ">Actualiza acerca de ti constantemente.</small>
+                </div>
+                <button type="submit" class="btn btn-primary">Actualizar</button>
+            </div>
+            <div class="justify-content-center">
+                <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg"
+                     class="col-lg-12 col-sm-12 col-md-8 py-1">
+                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
+                     class="col-lg-3 col-sm-12 col-md-8 py-1">
+                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
+                     class="col-lg-3 col-sm-12 col-md-8 py-1">
+                <img src="https://us.123rf.com/450wm/kesu87/kesu871907/kesu87190700139/127039478-hermoso-paisaje-con-amanecer-en-la-cascada-kirkjufellsfoss-y-la-monta%C3%B1a-kirkjufell-islandia-.jpg?ver=6"
+                     class="col-lg-3 col-sm-12 col-md-8 py-1">
+            </div>
+        </div>
+    </section><!-- End About Section -->
+
+    <!-- ======= My Account ======= -->
+    <section id="about" class="about">
+        <div class="container">
+
+            <div class="section-title">
+                <h2>Mis datos personales</h2>
+            </div>
+        </div>
+    </section>
+
+
+</main><!-- End #main -->
+
+<!-- ======= Footer ======= -->
+<footer id="footer">
+    <div class="container">
         <div class="copyright">
-           Influencer<strong> Colaboratory<span></span></strong>
+            Influencer<strong> Colaboratory<span></span></strong>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-         
-        </div>
-      </div>
-    </footer><!-- End  Footer -->
-  
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
 
-  </body>
+        </div>
+    </div>
+</footer><!-- End  Footer -->
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
