--- a/src/app/components/register-influencer/register-influencer.component.html
+++ b/src/app/components/register-influencer/register-influencer.component.html
@@ -1,50 +1,48 @@
-<body>
-    <div class="container register">
-        <div class="row">
-            <div class="col-md-3 register-left">
-                <img src="/src/assets/img/Logo_blanco.png" alt="INCO logo"/>
-                <h1>INCO</h1>
-                <a href="/">
-                    <input type="submit" name="" value="Login"/><br/></a>
-            </div>
-            <div class="col-md-9 register-right">
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
-                        <h3 class="register-heading">Apply as an Influencer</h3>
-                        <!-- <form [formGroup]="form" (ngSubmit)="submitForm()"> -->
-                            <form>
-                            <div class="row register-form">
-                                <div class="col-12">                
-                                    <div class="form-group">
-                                        <select  class="col-12 form-control"
-                                                onchange="document.getElementById('displayValue').value=this.options[this.selectedIndex].text; document.getElementById('idValue').value=this.options[this.selectedIndex].value;"
-                                                required>
-                                            <option value="" disabled selected hidden>category*</option>
-                                            <option value="1" >Fashion bloggers</option>
-                                            <option value="2" >Foodies</option>
-                                            <option value="3">gamers and technology gurus</option>
-                                            <option value="4">Celebrities and artists</option>
-                                            <option value="5">Fitness and healthy life</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea type="text" class="form-control"  placeholder="Description" value=""></textarea>
-                                    </div>  
-                                    <h5>foto de perfil</h5>
-                                    <input type="file">
-                                    <h5>foto de producto</h5>
-                                    <input type="file">
-                                    <h5>foto del influencer</h5>
-                                    <input type="file">
-                                    <h3 style="margin-bottom: 20px">Social media</h3>                                           
-                                </div>              
-                                <input type="submit" class="btnRegister"  value="Register"/>
+<div class="container register">
+    <div class="row">
+        <div class="col-md-3 register-left">
+            <img src="/src/assets/img/Logo_blanco.png" alt="INCO logo"/>
+            <h1>INCO</h1>
+            <a href="/">
+                <input type="submit" name="" value="Login"/><br/></a>
+        </div>
+        <div class="col-md-9 register-right">
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                    <h3 class="register-heading">Apply as an Influencer</h3>
+                    <!-- <form [formGroup]="form" (ngSubmit)="submitForm()"> -->
+                    <form>
+                        <div class="row register-form">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <select class="col-12 form-control"
+                                            onchange="document.getElementById('displayValue').value=this.options[this.selectedIndex].text; document.getElementById('idValue').value=this.options[this.selectedIndex].value;"
+                                            required>
+                                        <option value="" disabled selected hidden>category*</option>
+                                        <option value="1">Fashion bloggers</option>
+                                        <option value="2">Foodies</option>
+                                        <option value="3">gamers and technology gurus</option>
+                                        <option value="4">Celebrities and artists</option>
+                                        <option value="5">Fitness and healthy life</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <textarea type="text" class="form-control" placeholder="Description"
+                                              value=""></textarea>
+                                </div>
+                                <h5>foto de perfil</h5>
+                                <input type="file">
+                                <h5>foto de producto</h5>
+                                <input type="file">
+                                <h5>foto del influencer</h5>
+                                <input type="file">
+                                <h3 style="margin-bottom: 20px">Social media</h3>
                             </div>
-                        </form>
-                    </div>
+                            <input type="submit" class="btnRegister" value="Register"/>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    
-</body>
+</div>
