--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,73 +1,79 @@
-<div class="container register">
-    <div class="row">
-        <div class="col-md-3 register-left">
-            <img src="/src/assets/img/Logo_blanco.png" alt="INCO logo">
-            <h1>INCO</h1>
-            <a href="/">
-                <input type="submit" name="" value="Login"><br/></a>
-        </div>
-        <div class="col-md-9 register-right">
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="register-heading">User register</h3>
-                    <form [formGroup]="registerForm" (ngSubmit)="submitForm()">
-                        <div class="row register-form">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="User Name *" value=""
-                                           formControlName="name_user" required/>
+<body>
+    <div class="container register">
+        <div class="row">
+            <div class="col-md-3 register-left">
+                <img src="assets/img/Logo_blanco.png" alt="INCO logo">
+                <h1>INCO</h1>
+                <a href="/">
+                    <input type="submit" name="" value="Login"><br/></a>
+            </div>
+            <div class="col-md-9 register-right">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                        <h3 class="register-heading">User register</h3>
+                        <form [formGroup]="registerForm" (ngSubmit)="submitForm()" ngNativeValidate>
+                            <div class="row register-form">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="User Name *" value=""
+                                               formControlName="name_user" required/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Name *" value=""
+                                               formControlName="name" required/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Last Name *" value=""
+                                               formControlName="last_name" required/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" placeholder="Password *" value=""
+                                               formControlName="password" required/>
+                                    </div>
+                                    <!-- <div class="form-group">
+                                        <input type="password" class="form-control"  placeholder="Confirm Password *" value="" required />
+                                    </div> -->
+    
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Gender *" value=""
+                                               formControlName="gender" required/>
+                                    </div>
+    
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Name *" value=""
-                                           formControlName="name" required/>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Your Email *" value=""
+                                               formControlName="email" required/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" minlength="8" maxlength="10" class="form-control"
+                                               placeholder="ID *" value="" formControlName="CC" autocomplete="off"
+                                               required/>
+                                    </div>
+                                    <div>
+                                        <h6>User photo</h6>
+                                        <input type="file" accept="image/png, image/gif, image/jpeg">
+                                    </div>
+                                    <div class="maxl" >
+                                        <label class="radio inline">
+                                            <input type="radio" formControlName="role" value=1 checked >
+                                            <span> Entrepreneur </span>
+                                        </label>
+                                        <label class="radio inline">
+                                            <input type="radio" formControlName="role" value=2>
+                                            <span> Influencer </span>
+                                        </label>
+                                    </div>
+    
+                                    <input type="submit" class="btnRegister" value="Register"/>
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Last Name *" value=""
-                                           formControlName="last_name" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" placeholder="Password *" value=""
-                                           formControlName="password" required/>
-                                </div>
-                                <!-- <div class="form-group">
-                                    <input type="password" class="form-control"  placeholder="Confirm Password *" value="" required />
-                                </div> -->
-
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Gender *" value=""
-                                           formControlName="gender" required/>
-                                </div>
-
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" value=""
-                                           formControlName="email" required/>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" minlength="8" maxlength="10" class="form-control"
-                                           placeholder="ID *" value="" formControlName="CC" autocomplete="off"
-                                           required/>
-                                </div>
-                                <div class="maxl">
-                                    <label class="radio inline">
-                                        <input type="radio" formControlName="role" value=1 checked>
-                                        <span> Entrepreneur </span>
-                                    </label>
-                                    <label class="radio inline">
-                                        <input type="radio" formControlName="role" value=2>
-                                        <span> Influencer </span>
-                                    </label>
-                                </div>
-
-                                <input type="submit" class="btnRegister" value="Register"/>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</body>
