sign off buttom and redirection

--- a/src/app/components/influencer-conf/influencer-conf.component.html
+++ b/src/app/components/influencer-conf/influencer-conf.component.html
@@ -30,6 +30,8 @@
                 </li>
                 <li><a href="influencerConfig.html" class="nav-link scrollto active"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a>
                 </li>
+                <li><a href="login.html" class="nav-link scrollto"><i class="bi bi-power"></i> <span>Cerrar sesión</span></a>
+                </li>
             </ul>
         </nav><!-- .nav-menu -->
     </div>
