--- a/src/app/components/register-company/register-company.component.html
+++ b/src/app/components/register-company/register-company.component.html
@@ -54,7 +54,7 @@
                                                placeholder="Your Phone *" value="" name="contact_number" required/>
                                     </div>
                                     <div>
-                                        <h5>product photo</h5>
+                                        <h5>Companie photo</h5>
                                         <input type="file" accept="image/png, image/gif, image/jpeg">
                                     </div>
                                     <input type="submit" class="btnRegister" value="Register"/>
