view profile entrepeneur

--- a/src/app/components/perfil-influencer/perfil-influencer.component.html
+++ b/src/app/components/perfil-influencer/perfil-influencer.component.html
@@ -22,15 +22,13 @@
 
         <nav id="navbar" class="nav-menu navbar">
             <ul>
-                <li><a href="influencerView.html" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Perfil</span></a>
+                <li><a routerLink="/profile" href="influencerView.html" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>Perfil</span></a>
                 </li>
-                <li><a href="influencerRepo.html" class="nav-link scrollto"><i class="bx bx-stats"></i> <span>Colaboraciones</span></a>
+                <li><a routerLink="/colab" href="influencerRepo.html" class="nav-link scrollto"><i class="bx bx-stats"></i> <span>Colaboraciones</span></a>
                 </li>
-                <li><a href="influencerCal.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Calificaciones</span></a>
+                <li><a routerLink="/calification" href="influencerCal.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Calificaciones</span></a>
                 </li>
-                <li><a href="influencerConfig.html" class="nav-link scrollto"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a>
-                </li>
-                <li><a href="login.html" class="nav-link scrollto"><i class="bi bi-power"></i> <span>Cerrar sesión</span></a>
+                <li><a routerLink="/config" href="influencerConfig.html" class="nav-link scrollto"><i class="bx bx-pencil"></i> <span>Mi cuenta</span></a>
                 </li>
             </ul>
         </nav><!-- .nav-menu -->
