Correción de reset password

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                                            formControlName="password">
                                 </div>
                                 <div class="btn-group-vertical btn-group-lg">
-                                    <a routerLink="/resetPass">I forgot my password</a>
+                                    <a routerLink="/reset-password">I forgot my password</a>
                                     <a routerLink="/register">Create an account</a>
                                 </div>
                                 <button type="submit"
