--- a/src/app/components/entrepreneur-account/entrepreneur-account.component.html
+++ b/src/app/components/entrepreneur-account/entrepreneur-account.component.html
@@ -66,3 +66,65 @@
 
 
 </main><!-- End #main -->
+
+
+
+
+
+
+
+
+
+
+<main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>Configuration</h2>
+            <br>
+            <form *ngIf="userForm" [formGroup]="userForm" (ngSubmit)="updateUser()" class="section-title">
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Company Name *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="User Name *"
+                           formControlName="name_user">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Description *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Name *"
+                           formControlName="name">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Category *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Last Name *"
+                           formControlName="last_name">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Company Email *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="email" class="form-control" placeholder="Your Email *"
+                           formControlName="email">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Web Domain *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="Gender *"
+                           formControlName="gender">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Address *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="text" class="form-control" placeholder="ID *"
+                           formControlName="CC" minlength="8" maxlength="10" autocomplete="off">
+                </div>
+                <p class="col-lg-12 d-md-flex align-items-md-stretch form-group">Company Phone *</p>
+                <div class="col-lg-12 d-md-flex align-items-md-stretch form-group">
+                    <input type="password" class="form-control" placeholder="Password *"
+                           formControlName="password">
+                </div>
+                <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">
+                    Update
+                </button>
+            </form>
+        </div>
+    </section><!-- End About Section -->
+
+
+</main><!-- End #main -->
